--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{% if page.title %}{{ page.title }} - {% endif %}{{ site.title }}</title>
   <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
-  <link rel="stylesheet" href="{{ '/assets/css/introspector.cs' | relative_url }}">
+  <link rel="stylesheet" href="{{ '/assets/css/introspector.css' | relative_url }}">
   {% feed_meta %}
   {% seo %}
 </head>
