--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -144,6 +144,7 @@
   </footer>
 
   <script src="{{ '/assets/js/search.js' | relative_url }}"></script>
+  <script src="{{ '/assets/js/code-copy.js' | relative_url }}"></script>
   <script src="{{ '/assets/js/keyboard-shortcuts.js' | relative_url }}"></script>
 </body>
 </html>
