--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,11 +25,11 @@
       
       <nav>
         <ul class="main-nav">
-          <li class="nav-item"><a href="{{ '/getting-started/quickstart/' | relative_url }}">Quickstart</a></li>
-          <li class="nav-item"><a href="{{ '/concepts/mental-model/' | relative_url }}">Concepts</a></li>
-          <li class="nav-item"><a href="{{ '/usage/payloads/' | relative_url }}">Usage</a></li>
-          <li class="nav-item"><a href="{{ '/reference/commands/' | relative_url }}">Reference</a></li>
-          <li class="nav-item"><a href="{{ '/examples/redirect-following/' | relative_url }}">Examples</a></li>
+          <li class="nav-item"><a href="{{ '/getting-started/quickstart' | relative_url }}">Quickstart</a></li>
+          <li class="nav-item"><a href="{{ '/concepts/mental-model' | relative_url }}">Concepts</a></li>
+          <li class="nav-item"><a href="{{ '/usage/payloads' | relative_url }}">Usage</a></li>
+          <li class="nav-item"><a href="{{ '/reference/commands' | relative_url }}">Reference</a></li>
+          <li class="nav-item"><a href="{{ '/examples/redirect-following' | relative_url }}">Examples</a></li>
         </ul>
       </nav>
     </div>
