--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
   <header class="site-header">
     <div class="header-content">
       <a href="{{ '/' | relative_url }}" class="site-title">
-        <img src="{{ '/assets/img/introspector.png' | relative_url }}" class="site-logo" alt="Introspector">
+        <img src="{{ '/assets/img/introspector.png' | relative_url }}" alt="Introspector" class="site-logo">
         <span class="title-prompt">></span>
         <span class="title-text">{{ site.title }}</span>
       </a>
